--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,10 @@ timezone: Asia/Seoul
 permalink: '/:title'
 paginate: 20
 paginate_path: '/page/:num/'
-ampdir: ''
+amp:
+  story:
+    layout: amp-story
+    collection: stories
 markdown: CommonMark
 commonmark:
   options:
@@ -19,6 +22,7 @@ commonmark:
     - autolink
     - table
 minify_html: false
+destination: ./docs
 incremental: true
 plugins:
   - jekyll-paginate
@@ -33,7 +37,6 @@ exclude:
   - CNAME
   - Gemfile
   - Gemfile.lock
-  - _includes/styles.min.css
 keep_files:
   - assets
 id: '54370843'
@@ -51,9 +54,9 @@ mobileTitleImage:
   originalImage: 'https://blogimgs.pstatic.net/mobile/mobile_title08_l.jpg'
   croppedImage: 'https://blogimgs.pstatic.net/mobile/mobile_title08_l.jpg'
   previewImage: 'https://blogimgs.pstatic.net/mobile/mobile_title08_l.jpg'
-dayVisitorCount: 3
+dayVisitorCount: 8
 subscriberCount: 9
-totalVisitorCount: 615
+totalVisitorCount: 620
 block: false
 mylogBlock: false
 profileImagePath: ''
@@ -65,6 +68,6 @@ relationType: 4
 showReservationGuide: false
 deletedAt: null
 createdAt: 2019-03-17T12:15:29.146Z
-updatedAt: 2019-03-21T19:32:49.849Z
+updatedAt: 2019-03-22T02:35:57.322Z
 ---
 
